--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,33 +13,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-  flutter_svg:
-  intl:
-  get:
-  table_calendar:
-  cupertino_icons:
-  fluttertoast:
-  provider:
-  email_validator:
-  get_it:
-  path_provider:
-  url_launcher:
-  material_design_icons_flutter:
   connectivity:
+  cupertino_icons:
+  email_validator:
   firebase_auth:
-  shared_preferences:
   firebase_core:
+  flutter_local_notifications: ^3.0.2
+  flutter_native_timezone: ^1.0.4
+  flutter_svg:
+  fluttertoast:
+  get:
+  get_it:
+  http: ^0.12.2
+  intl:
+  material_design_icons_flutter:
+  path_provider:
+  provider:
+  rxdart: ^0.25.0
+  shared_preferences:
+  sprintf: ^5.0.0
   sqflite: ^1.3.2+1
   sqflite_migration_service: ^1.0.4
-  rxdart: ^0.25.0
-  flutter_local_notifications: ^3.0.2
-  http: ^0.12.2
+  table_calendar:
   timezone: ^0.5.9
-  flutter_native_timezone: ^1.0.4
+  url_launcher:
 
 dev_dependencies:
-  # flutter_launcher_icons:
   flutter_test:
     sdk: flutter
 
@@ -47,7 +46,6 @@ dev_dependencies:
 #   android: "launcher_icon"
 #   ios: true
 #   image_path: "assets/icons/squircle_planit.png"
-
 flutter:
   uses-material-design: true
   assets:
