--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,7 @@
 name: PlanIt
 description: Plan it and Organize.
 
-# The following line prevents the package from being accidentally published to
-# pub.dev using `pub publish`. This is preferred for private packages.
-publish_to: "none" # Remove this line if you wish to publish to pub.dev
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -18,7 +16,7 @@ dependencies:
   email_validator:
   firebase_auth:
   firebase_core:
-  flutter_local_notifications: ^3.0.2
+  flutter_local_notifications: ^4.0.0
   flutter_native_timezone: ^1.0.4
   flutter_svg:
   fluttertoast:
@@ -35,17 +33,13 @@ dependencies:
   sqflite: ^1.3.2+1
   sqflite_migration_service: ^1.0.4
   table_calendar:
-  timezone: ^0.5.9
+  timezone: ^0.6.1
   url_launcher:
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
-# flutter_icons:
-#   android: "launcher_icon"
-#   ios: true
-#   image_path: "assets/icons/squircle_planit.png"
 flutter:
   uses-material-design: true
   assets:
