--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -57,7 +57,7 @@ android {
 
     buildTypes {
         release {
-            signingConfig signingConfigs.release
+            signingConfig signingConfigs.debug
             // Enables code shrinking, obfuscation, and optimization for only
             // your project's release build type.
 //            minifyEnabled false
